# EBL

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ast.cpp  ast.hpp  dofile.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  lisp.cpp  lisp.hpp  makefile  memory.cpp  memory.hpp  repl.cpp  syntax.md  test.cpp  test.lisp  types.cpp  types.hpp  unit-test.sh  unit.lisp  utility.hpp
dll/: debug.cpp  fs.cpp  sys.cpp
ebl/: csv.ebl  curry.ebl  ebl-mode.el  foo.ebl  fs-test.lisp  gc-test.lisp  json.ebl  json.test.ebl  lang.test.ebl  mandelbrot.ebl  mandelbrot.scm  repl.ebl  stdalgo.ebl  stdfs.ebl  stdlib.ebl  stdlib.test.ebl  stdstr.ebl  stdutil.ebl  temp.ebl  unit-test.ebl  vm-test.lisp  yc.lisp
ebl/std/: algo.ebl  fs.ebl  lib.ebl  str.ebl  util.ebl
emacs/: ebl-mode.el
extlib/: smallVector.hpp
interp/: evaluator.cpp  evaluator.hpp
lib/: ast.cpp  ast.hpp  bytecode.cpp  bytecode.hpp  common.hpp  dll.cpp  dll.hpp  environment.cpp  environment.hpp  gc.cpp  gc.hpp  lexer.cpp  lexer.hpp  lisp.cpp  lisp.hpp  listBuilder.cpp  listBuilder.hpp  memory.cpp  memory.hpp  parser.cpp  parser.hpp  persistent.cpp  persistent.hpp  pool.hpp  subr.cpp  types.cpp  types.hpp  utility.hpp  vm.cpp  vm.hpp
lisp/: csv.ebl  csv.lisp  json.ebl  mandelbrot.ebl  mandelbrot.lisp  mandelbrot.scm  stdalgo.ebl  stdfs.ebl  stdlib.ebl  stdlib.lisp  stdstr.ebl  stdstream.ebl  stdutil.ebl  unit-test.ebl  unit-test.lisp
runtime/: ast.cpp  ast.hpp  ast.hpp.rej  builtins.cpp  bytecode.cpp  bytecode.hpp  common.hpp  dll.cpp  dll.hpp  ebl.hpp  environment.cpp  environment.hpp  format-onloads.ebl  gc.cpp  gc.hpp  lexer.cpp  lexer.hpp  listBuilder.cpp  listBuilder.hpp  macros.hpp  memory.cpp  memory.hpp  onload-stub.ebl  onloads.hpp  parser.cpp  parser.hpp  persistent.cpp  persistent.hpp  pool.hpp  spinlock.hpp  types.cpp  types.hpp  utility.hpp  vm.cpp  vm.hpp
scripts/: mandelbrot.lisp  test.lisp
tools/: dofile.cpp  repl.cpp  runBytecode.cpp
